Fix marquee appearance on mobile

--- a/src/app/hakol-kore/hakol-kore.component.less
+++ b/src/app/hakol-kore/hakol-kore.component.less
@@ -1,4 +1,9 @@
 budgetkey-container {
+
+    ::ng-deep budgetkey-header {
+        z-index: 1;
+    }
+
     .background-graphic {
         background-image: linear-gradient(57deg, #8b47a5, #5a32d1);
     }
