--- a/src/app/main-page/main-page.component.less
+++ b/src/app/main-page/main-page.component.less
@@ -1,25 +1,29 @@
 .marquee {
     position: fixed;
-    left: 50vw;
-    top: -40px;
+    right: 0;
+    width: 100vw;
+    top: -150px;
     transition-property: top;
     transition-delay: 0s;
     transition-duration: 1s;
-    z-index: 100;
+    z-index: 1;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    pointer-events: none;
 
     .marquee-inner {
         border-bottom-right-radius: 10px;
         border-bottom-left-radius: 10px;
         background-color: rgb(113, 222, 207);  
         padding: 5px 10px;
-        margin-left: -50%;
-        margin-right: 50%;
+        pointer-events: all;
 
         a {
             margin-left: -50%;
             span {
                 display: inline-block;
-                white-space: nowrap;
+                // white-space: nowrap;
                 font-size: 16px;
                 color: black;  
             }      
